# md-llm

./: .gitignore  README.md  add_to_db.py  cli.py  config.py  config_logger.py  debug_db.py  flash_README.md  list_models.py  main_cli.py  notes_to_refactor.md  populate_db.py  pyproject.toml  search_cli.py  session_cli.py  vector_db_requirements.txt
evaluations/: central_evaluator.py
evaluations/flash2/: coding.txt  general_knowledge.txt  math.txt  summarization.txt  writing.txt
evaluations/o1-mini/: coding.txt  general_knowledge.txt  math.txt  summarization.txt  writing.txt
evaluations/perplexity/: coding.txt  general_knowledge.txt  math.txt  summarization.txt  writing.txt
prompts/: coding_prompt.txt  prompts.py  snip_prompt.txt  study_prompt.txt  visualisation_prompt.txt
src/: context_manager.py  embeddings.py  file_processor.py  llm.py  response_handler.py  search_service.py  session.py  session_manager.py  vector_store.py
tests/: test_cli.py  test_config.py  test_context_manager.py  test_llm.py  test_session_manager.py
